0x07-python-test_driven_development/tests/5-text_indentation.txt
>>> text_indentation = __import__('5-text_indentation').text_indentation

>>> text_indentation("""Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quonam modo? Utrum igitur tibi litteram videor an totas paginas commovere? Non autem hoc: igitur ne illud quidem. Fortasse id optimum, sed ubi illud: Plus semper voluptatis? Teneo, inquit, finem illi videri nihil dolere. Transfer idem ad modestiam vel temperantiam, quae est moderatio cupiditatum rationi oboediens. Si id dicis, vicimus. Inde sermone vario sex illa a Dipylo stadia confecimus. Sin aliud quid voles, postea. Quae animi affectio suum cuique tribuens atque hanc, quam dico. Utinam quidem dicerent alium alio beatiorem! Iam ruinas videres""")
Lorem ipsum dolor sit amet
<BLANKLINE>
 consectetur adipiscing elit
<BLANKLINE>
 Quonam modo
<BLANKLINE>
 Utrum igitur tibi litteram videor an totas paginas commovere
<BLANKLINE>
 Non autem hoc
<BLANKLINE>
 igitur ne illud quidem
<BLANKLINE>
 Fortasse id optimum
<BLANKLINE>
 sed ubi illud
<BLANKLINE>
 Plus semper voluptatis
<BLANKLINE>
 Teneo
<BLANKLINE>
 inquit
<BLANKLINE>
 finem illi videri nihil dolere
<BLANKLINE>
 Transfer idem ad modestiam vel temperantiam
<BLANKLINE>
 quae est moderatio cupiditatum rationi oboediens
<BLANKLINE>
 Si id dicis
<BLANKLINE>
 vicimus
<BLANKLINE>
 Inde sermone vario sex illa a Dipylo stadia confecimus
<BLANKLINE>
 Sin aliud quid voles
<BLANKLINE>
 postea
<BLANKLINE>
 Quae animi affectio suum cuique tribuens atque hanc
<BLANKLINE>
 quam dico
<BLANKLINE>
 Utinam quidem dicerent alium alio beatiorem! Iam ruinas videres

>>> text_indentation("")

>>> text_indentation()
Traceback (most recent call last):
...
TypeError: text_indentation() missing 1 required positional argument: 'text'

>>> text_indentation(None)
Traceback (most recent call last):
...
TypeError: text must be a string

>>> text_indentation(1)
Traceback (most recent call last):
...
TypeError: text must be a string

>>> text_indentation(1.0)
Traceback (most recent call last):
...
TypeError: text must be a string

>>> text_indentation(())
Traceback (most recent call last):
...
TypeError: text must be a string

>>> text_indentation({})
Traceback (most recent call last):
...
TypeError: text must be a string

>>> text_indentation([])
Traceback (most recent call last):
...
TypeError: text must be a string

>>> text_indentation(float("inf"))
Traceback (most recent call last):
...
TypeError: text must be a string

>>> text_indentation(float("-inf"))
Traceback (most recent call last):
...
TypeError: text must be a string

>>> text_indentation("~!@#$%^&*()_+=-?/.>,<`{}[]\|)
Traceback (most recent call last):
...
SyntaxError: EOL while scanning string literal

>>> text_indentation("~!@#$%^&*()_+=-?/.>,<`{}[]|\")
Traceback (most recent call last):
...
SyntaxError: EOL while scanning string literal

>>> text_indentation("~!@#$%^&*()_+=-?/.>,<`{}[]|\"")
~!@#$%^&*()_+=-
<BLANKLINE>
/
<BLANKLINE>
>
<BLANKLINE>
<`{}[]|"
